openshift/30_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: db2-ug-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-app
  sessionAffinity: None
